# dpx_tc002_frm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Gemfile  _config.yml  dpx_release_note_template.md  dpx_tc002_frm.code-workspace  platformio.ini  platformio_override.ini  readme.md
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report---.md  feature-request---.md
docs/: HANDOFF_TODO.md  ROADMAP.md
pio-scripts/: write_build_ts.py
tools/: dpx_test.sh
tools/ltc_osc_bridge/: Launch LTC Bridge.bat  Launch LTC Bridge.command  OSC_BRIDGE_HANDOFF.md  ltc_osc_bridge.py  ltc_osc_bridge_gui.py  pyproject.toml  requirements.txt
usermods/dpx_matrix/: dpx_api.h  dpx_apps.h  dpx_buzzer.h  dpx_firstboot.h  dpx_font.h  dpx_html.h  dpx_matrix.cpp  dpx_matrix.h  dpx_mqtt.h  dpx_notifications.h  dpx_osc.h  dpx_overlay.h  dpx_persist.h  dpx_tc.h  dpx_text.h  library.json
wled00/: const.h
