[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ltc-osc-bridge"
version = "1.0.0"
description = "Decode SMPTE LTC from audio and send timecode via OSC UDP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "sounddevice>=0.4.0",
    "numpy>=1.21.0",
    "python-osc>=1.8.0",
    "flask>=2.0.0",
]

[project.scripts]
ltc-osc-bridge     = "ltc_osc_bridge:main"
ltc-osc-bridge-gui = "ltc_osc_bridge_gui:main"

[tool.setuptools]
py-modules = ["ltc_osc_bridge"]
